--- a/config/database.yml
+++ b/config/database.yml
@@ -52,3 +52,7 @@ production:
   database: love-board4_production
   username: love-board4
   password: <%= ENV['LOVE-BOARD4_DATABASE_PASSWORD'] %>
+  adapter: postgresql
+  encoding: unicode
+  pool: 5
+  
